--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -1,7 +1,7 @@
 <%@ page language="java" contentType="text/html; charset=utf-8" pageEncoding="utf-8"%>
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -10,7 +10,7 @@
 <body>
 
     <%@ taglib prefix="form" uri="http://www.springframework.org/tags/form"%>
-    <form:form method="POST" action="/price/api/product/admin/edit/${product.id}" modelAttribute="product">
+    <form:form method="POST" action="/price/api/product/admin/edit/${product.id}" modelAttribute="product" commandName="product">
          <table>
             <tr class="form-group">
                     <td><form:label path="name">Name</form:label></td>
