--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,11 +1,12 @@
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en"
+    xmlns:th="http://www.thymeleaf.org"
+>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <link href="/css/bootstrap.min.css" rel="stylesheet"/>
 
@@ -49,20 +50,14 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <c:forEach var="posts" items="${posts}">
-                                    <tr class="row">
-                                        <td class="col-6">
-                                            <c:out value="${posts.name}"/>
-                                        </td>
-                                        <td class="col-3">
-                                            <c:out value="${posts.date}"/>
-                                        </td>
-                                        <td class="col-3">
-                                            <a href="/price/api/product/admin/edit/${posts.id}" class="btn btn-primary"><i class="glyphicon glyphicon-edit"></i>Edit</a>
-                                            <a href="/price/api/product/admin/delete/${posts.id}" class="btn btn-danger"><i class="glyphicon glyphicon-trash"></i>Delete</a>
-                                        </td>
-                                    </tr>
-                                </c:forEach>
+                                <tr class="row" th:each="posts : ${posts}" >
+                                    <td class="col-6" th:text="${posts.name}"></td>
+                                    <td class="col-3" th:text="${date}"></td>
+                                    <td class="col-3">
+                                        <a th:href="@{/price/api/product/admin/edit/${id}(id=${posts.id})}" class="btn btn-primary"><i class="glyphicon glyphicon-edit"></i>Edit</a>
+                                        <a th:href="@{/price/api/product/admin/delete/${id}(id=${posts.id})}" class="btn btn-danger"><i class="glyphicon glyphicon-trash"></i>Delete</a>
+                                    </td>
+                                </tr>
                           </tbody>
                         </table>
 
