Added in the ability to add email address, basic template for the compare admin page, fixed the getting of price and ensuring that it doesn't re-add the same price

--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -14,12 +14,12 @@
 
         <nav class="navbar navbar-default">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Price</a>
+                <a class="navbar-brand" href="/price/api/compare/admin/">Price</a>
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="/price/api/product/admin/">Product</a></li>
                 <li><a href="/price/api/website/admin/">Website</a></li>
-                <li><a href="/price/api/target/admin/">Target</a></li>
+                <li><a href="/price/api/sendEmail/admin/">Email</a></li>
             </ul>
         </nav>
 
