Added in providers, updated the website class, updated the way it gets the price, now it will look for any price value and return the lowest

--- a/src/main/resources/templates/email/add.html
+++ b/src/main/resources/templates/email/add.html
@@ -26,6 +26,10 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>Activate:</td>
+                    <td><input type="checkbox" th:field="*{activate}" /></td>
+                </tr>
+                <tr>
                     <td>
                         <input type="submit" value="Submit" />
                     </td>
