--- a/src/main/resources/templates/provider/edit.html
+++ b/src/main/resources/templates/provider/edit.html
@@ -6,12 +6,12 @@
 <body>
     <div layout:fragment="content">
         <div class="col-md-12">
-            <h1>Edit email</h1>
+            <h1>Edit provider</h1>
         </div>
         <form class="col-md-12"
               action="#"
-              th:action="@{/price/api/sendEmail/admin/edit/*{id}(id=${SendEmail.id})}"
-              th:object="${SendEmail}"
+              th:action="@{/price/api/provider/admin/edit/*{id}(id=${provider.id})}"
+              th:object="${provider}"
               method="post">
             <table>
                 <tr>
@@ -22,15 +22,11 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Email:</td>
+                    <td>Target name:</td>
                     <td>
-                        <input type="text" th:field="*{email}" />
-                        <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error message</span>
+                        <input type="text" th:field="*{targetName}" /><br />
+                        <span th:if="${#fields.hasErrors('targetName')}" th:errors="*{targetName}">Target name error message</span>
                     </td>
-                </tr>
-                <tr>
-                    <td>Activate:</td>
-                    <td><input type="checkbox" th:field="*{activate}" /></td>
                 </tr>
                 <tr>
                     <td>
