--- a/src/main/resources/templates/provider/list.html
+++ b/src/main/resources/templates/provider/list.html
@@ -5,16 +5,15 @@
       layout:decorator="default">
 <body>
     <div layout:fragment="content">
-        <h1>Email list</h1>
-        <a href="/price/api/sendEmail/admin/add" class="btn btn-success">Create new Email</a>
+        <h1>Provider list</h1>
+        <a href="/price/api/provider/admin/add" class="btn btn-success">Create new Provider</a>
 
 
         <table class="table table-striped">
             <thead>
             <tr class="row">
                 <th class="col-3">Name</th>
-                <th class="col-3">Email</th>
-                <th class="col-1">Activated</th>
+                <th class="col-4">Target name</th>
                 <th class="col-3">Modified</th>
                 <th class="col-2">Options</th>
             </tr>
@@ -22,13 +21,12 @@
             <tbody>
             <tr class="row" th:each="posts : ${posts}" >
                 <td class="col-3" th:text="${posts.name}"></td>
-                <td class="col-3" th:text="${posts.email}"></td>
-                <td class="col-1" th:text="${posts.activate}"></td>
+                <td class="col-4" th:text="${posts.targetName}"></td>
                 <td class="col-3" th:text="${posts.date}"></td>
                 <td class="col-2">
-                    <a th:href="@{/price/api/sendEmail/admin/edit/{id}(id=${posts.id})}" class="btn btn-primary"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a>
+                    <a th:href="@{/price/api/provider/admin/edit/{id}(id=${posts.id})}" class="btn btn-primary"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a>
                     <form action="#"
-                          th:action="@{/price/api/sendEmail/admin/delete/{id}(id=${posts.id})}"
+                          th:action="@{/price/api/provider/admin/delete/{id}(id=${posts.id})}"
                           method="post">
                         <button class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete</button>
                     </form>
