Reorganised the structure of the classes making them smaller

--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -18,6 +18,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="/price/api/product/admin/">Product</a></li>
+                <li><a href="/price/api/provider/admin/">Provider</a></li>
                 <li><a href="/price/api/website/admin/">Website</a></li>
                 <li><a href="/price/api/sendEmail/admin/">Email</a></li>
             </ul>
