All files updated, added in compare graph pages, react webpack. some currency updates

--- a/src/main/resources/templates/compare/list.html
+++ b/src/main/resources/templates/compare/list.html
@@ -6,6 +6,10 @@
 <body>
     <div layout:fragment="content">
         <h1>Compare price list</h1>
+
+        <div id="react"></div>
+
+        <script src="/price/api/built/bundle.js"></script>
     </div>
 </body>
 </html>
