--- a/src/main/resources/templates/provider/edit.html
+++ b/src/main/resources/templates/provider/edit.html
@@ -29,6 +29,13 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>Colour:</td>
+                    <td>
+                        <input type="text" th:field="*{colour}" /><br />
+                        <span th:if="${#fields.hasErrors('colour')}" th:errors="*{colour}">Colour error message</span>
+                    </td>
+                </tr>
+                <tr>
                     <td>
                         <input type="hidden" th:field="*{id}" />
                         <input type="submit" value="Submit" />
