--- a/src/main/resources/templates/provider/list.html
+++ b/src/main/resources/templates/provider/list.html
@@ -12,16 +12,18 @@
         <table class="table table-striped">
             <thead>
             <tr class="row">
-                <th class="col-3">Name</th>
+                <th class="col-2">Name</th>
                 <th class="col-4">Target name</th>
+                <th class="col-1">Colour</th>
                 <th class="col-3">Modified</th>
                 <th class="col-2">Options</th>
             </tr>
             </thead>
             <tbody>
             <tr class="row" th:each="posts : ${posts}" >
-                <td class="col-3" th:text="${posts.name}"></td>
+                <td class="col-2" th:text="${posts.name}"></td>
                 <td class="col-4" th:text="${posts.targetName}"></td>
+                <td class="col-1" th:text="${posts.colour}"></td>
                 <td class="col-3" th:text="${posts.date}"></td>
                 <td class="col-2">
                     <a th:href="@{/price/api/provider/admin/edit/{id}(id=${posts.id})}" class="btn btn-primary"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a>
