Fetch on the compare. Admin can now fetch compare stats

--- a/src/main/resources/templates/compare/list.html
+++ b/src/main/resources/templates/compare/list.html
@@ -6,6 +6,9 @@
 <body>
     <div layout:fragment="content">
         <h1>Compare price list</h1>
+        <span href="/price/api/compare/" class="btn btn-success fetch_compare">Manually fetch</span>
+        <div class="message"></div>
+
 
         <div id="react"></div>
 
