--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/price/api/css/bootstrap.min.css" th:href="@{/price/api/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="/price/api/css/simpleStylesheet.css" th:href="@{/price/api/css/simpleStylesheet.css}"/>
     <title>Compare Admin Form</title>
 </head>
 <body>
@@ -30,6 +31,8 @@
             </div>
         </div>
     </div>
+    <script src="/price/api/js/jquery-3.2.1.min.js"></script>
     <script src="/price/api/js/bootstrap.min.js"></script>
+    <script src="/price/api/js/simpleFunction.js"></script>
 </body>
 </html>
